Update: index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <li>Data persistence and modeling with SQL/NoSQL databases</li>
           </ul>
           <div class="project-footer">
-            <a href="https://github.com/jim408401/jim408401.github.io" class="project-link">
+            <a href="https://github.com/jim408401/jim408401.github.io" class="project-link" target="_blank">
               <span>View project</span>
               <i class="fas fa-external-link-alt"></i>
             </a>
@@ -177,7 +177,7 @@
             <li>Dashboard for usage tracking, server monitoring, and user feedback</li>
           </ul>
           <div class="project-footer">
-            <a href="https://github.com/jim408401/chatbot" class="project-link">
+            <a href="https://github.com/jim408401/chatbot" class="project-link" target="_blank">
               <span>View project</span>
               <i class="fas fa-external-link-alt"></i>
             </a>
@@ -199,7 +199,7 @@
             <li>Text classification using machine learning models</li>
           </ul>
           <div class="project-footer">
-            <a href="https://github.com/jim408401/social-media-analytics" class="project-link">
+            <a href="https://github.com/jim408401/social-media-analytics" class="project-link" target="_blank">
               <span>View project</span>
               <i class="fas fa-external-link-alt"></i>
             </a>
